from entiites unwanted fields removed or commented